plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.0' apply(false)
    id 'io.spring.dependency-management' version '1.1.6' apply(false)
}

allprojects {
    group = 'project.closet'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }
}

subprojects {
    apply {
        plugin('java')
        plugin('org.springframework.boot')
        plugin('io.spring.dependency-management')
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        // lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'
        testCompileOnly 'org.projectlombok:lombok'

        // test
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.security:spring-security-test'
    }
    tasks.named('jar') {
        enabled = false
    }
    tasks.named('bootJar') {
        enabled = false
    }
    tasks.named('test') {
        useJUnitPlatform()
    }
}
